--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         user: pinax-network
         filename: profile/metrics.svg
-        token: ${{ secrets.GITHUB_TOKEN }}
-        # token: ${{ secrets.METRICS_TOKEN }}
+        # token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.METRICS_TOKEN }}
         base: header, activity, community, repositories, metadata
         base_indepth: yes
         plugin_languages_ignored: html, css, dockerfile, shell, javascript, makefile
