--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,8 +19,9 @@ jobs:
         token: ${{ secrets.METRICS_TOKEN }}
         base: header, activity, community, repositories, metadata
         base_indepth: yes
-        plugin_languages_ignored: html, css, dockerfile, shell, javascript, makefile
+        plugin_languages_ignored: html, css, dockerfile, shell, javascript, makefile, scss
         plugin_followup: yes
+        plugin_languages_threshold: 2%
         plugin_followup_sections: repositories
         plugin_languages: yes
         plugin_people: yes
